Demo/src/objects/PENFED_Member__c.object
<CustomObject>
    <description>PENFED Member Information</description>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Rank__c</fullName>
        <label>Grade/Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_since__c</fullName>
        <label>Member since</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Branch__c</fullName>
        <label>Military Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obtained_by_Merger__c</fullName>
        <label>Obtained by Merger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PENFED_Credit_Union__c</fullName>
        <label>PENFED Credit Union</label>
        <referenceTo>PENFED_Credit_Union__c</referenceTo>
        <relationshipLabel>PENFED Members</relationshipLabel>
        <relationshipName>PENFED_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Verbal_Password__c</fullName>
        <label>Verbal Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>PENFED Member</label>
    <nameField>
        <label>PENFED Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PENFED Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>